issue: fix spacing for issue well line

--- a/magazine/static/magazine/css/issue_well.css
+++ b/magazine/static/magazine/css/issue_well.css
@@ -21,7 +21,12 @@
 }
 
 .issue-well-number {
-    border-bottom: 5px solid rgb(255, 255, 255);
+    padding-bottom: 2px;
+    border-bottom: 3px solid rgb(255, 255, 255);
+}
+
+.issue-well-title {
+    padding-top: 4px;
 }
 
 .issue-well-content {
